# pixel-compiler

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compile_commands.json  nginx.conf
examples/: average.pix  fibonacci.pix  max.pix  race.pix  rule110.pix  text.pix  wall_clock.pix
highlighting/: package-lock.json  package.json  rollup.config.js  tsconfig.json
highlighting/src/: .gitignore  highlight.js  index.ts  pixel-asm-highlight.d.ts  pixel-asm-highlight.js  pixel-asm.d.ts  pixel-asm.grammar  pixel-asm.js  pixel-asm.terms.js  pixel-asm.ts  pixel-highlight.js  pixel.grammar  pixel.js  pixel.terms.js  pixel.terms.ts  pixel.ts
playground/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.server.json
playground/server/: main.ts
playground/src/: App.vue  main.ts  pixel-extensions.ts  pixel.ts  toast.ts
playground/src/assets/: base.css  main.css
playground/src/components/: AsmView.vue  AstXmlView.vue  CodeEditor.vue  PixelVMView.vue  PlaygroundView.vue  SourceCodeView.vue
playground/src/stores/: asm.ts  ast.ts  compilerOutput.ts
playground/src/views/: AboutView.vue  HomeView.vue
report/: .gitignore  Makefile  ast_uml.plantuml  ast_uml_reduced.plantuml  lexer_dfsa.dot  references.bib  report.tex
scripts/: deploy.bash  run.bash
src/: ast.cc  ast.hh  codegen.cc  codegen.hh  compiler.hh  deadcode.cc  deadcode.hh  lexer.cc  lexer.hh  location.hh  main.cc  parser.cc  parser.hh  peephole.cc  peephole.hh  semantic_visitor.cc  semantic_visitor.hh  util.hh  visitor.cc  visitor.hh  xml_printer.hh  xml_visitor.cc  xml_visitor.hh
tests/: lexer_tests.cc  semantic_visitor_tests.cc
vm/: .dockerignore  .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.cjs
vm/src/: assembler.ts  index.ts  instructions.ts  program.ts  vm.ts
